tree-sitter-xdy/test/corpus/dice.txt
==========================
Dice: 1D6
==========================

1D6

---

(function (standard_dice (constant) (integer)))

==========================
Dice: 1d6
==========================

1d6

---

(function (standard_dice (constant) (integer)))

==========================
Dice: 2D8
==========================

2D8

---

(function (standard_dice (constant) (integer)))

==========================
Dice: 20D10
==========================

20D10

---

(function (standard_dice (constant) (integer)))

==========================
Dice: 3D-6
==========================

3D-6

---

(function (standard_dice (constant) (integer)))

==========================
Dice: 3D-6 - 1
==========================

3D-6 - 1

---

(function (sub (standard_dice (constant) (integer)) (constant)))

==========================
Dice: {x}D{y}
==========================

{x}D{y}

---

(function
	(standard_dice
		(variable (identifier))
		(variable (identifier))))

==========================
Dice: 1D[-1, 0, 1]
==========================

1D[-1, 0, 1]

---

(function
	(custom_dice
		(constant)
		(custom_faces
			(integer)
			(integer)
			(integer))))

==========================
Dice: (1D6)
==========================

(1D6)

---

(function (group (standard_dice (constant) (integer))))

==========================
Dice: (1)D(6)
==========================

(1)D(6)

---

(function (standard_dice (group (constant)) (group (constant))))

===================================
Dice: (1d[1, 1, 2, 3, 5, 8])D(1D8)
===================================

(1d[1, 1, 2, 3, 5, 8])D(1D8)

---

(function
	(standard_dice
		(group
			(custom_dice
				(constant)
				(custom_faces
					(integer)
					(integer)
					(integer)
					(integer)
					(integer)
					(integer))))
		(group
			(standard_dice
				(constant)
				(integer)))))

===================================
No Count: D8
:error
===================================

D8

---

==========================
Dice: 3D10 drop lowest
==========================

3D10 drop lowest

---

(function
	(drop_lowest
		(standard_dice
			(constant)
			(integer))))

==========================
Dice: 3D10 drop lowest 2
==========================

3D10 drop lowest 2

---

(function
	(drop_lowest
		(standard_dice
			(constant)
			(integer))
		(constant)))

==========================
Dice: 3D10 drop highest
==========================

3D10 drop highest

---

(function
	(drop_highest
		(standard_dice
			(constant)
			(integer))))

==========================
Dice: 3D10 drop highest 2
==========================

3D10 drop highest 2

---

(function
	(drop_highest
		(standard_dice
			(constant)
			(integer))
		(constant)))

=========================================
Dice: 10D10 drop highest 2 drop lowest 5
=========================================

10D10 drop highest 2 drop lowest 5

---

(function
	(drop_lowest
		(drop_highest
			(standard_dice
				(constant)
				(integer))
			(constant))
		(constant)))

=================================================
Dice: 10D10 drop lowest (1 + 3) drop highest {x}
=================================================

10D10 drop lowest (1 + 3) drop highest {x}

---

(function
	(drop_highest
		(drop_lowest
			(standard_dice
				(constant)
				(integer))
			(group
				(add
					(constant)
					(constant))))
		(variable
			(identifier))))

==================================================
Dice: 4D6 drop lowest -1 (subtraction, not count)
==================================================

4D6 drop lowest -1

---

(function
	(sub
		(drop_lowest
			(standard_dice
				(constant)
				(integer)))
		(constant)))

===========================================
Dice: 3D6 drop highest -2D4 (subtraction)
===========================================

3D6 drop highest -2D4

---

(function
	(sub
		(drop_highest
			(standard_dice
				(constant)
				(integer)))
		(standard_dice
			(constant)
			(integer))))

======================================
Dice: 4D6 drop lowest (-1) (grouped)
======================================

4D6 drop lowest (-1)

---

(function
	(drop_lowest
		(standard_dice
			(constant)
			(integer))
		(group
			(neg
				(constant)))))
